--- a/HTMLcss/module01-02/index.html
+++ b/HTMLcss/module01-02/index.html
@@ -45,5 +45,7 @@
     Rerum doloribus officia velit necessitatibus atque nemo ullam culpa itaque odit sit repellat voluptatem eaque tempore, distinctio quibusdam cupiditate. Quis sapiente sed, odio sit quidem iure odit est repudiandae molestias?
     Illo provident possimus nam architecto dolore saepe aliquid ea numquam quas atque, distinctio ipsa illum error officia ut, beatae maiores, dignissimos vero incidunt. Deleniti, magni. Assumenda in perferendis inventore laudantium.
     </p>
+
+    <p style="text-align: left"><a href="http://google.com.ua" target="_blank"><button>load more</button></a>
 </body>
 </html>
